[package]
name = "tokiopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tokiopy"
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
pyo3 = "0.20.0"
tokio = { version = "1.37.0", features = ["full"] }
